# mdbook-echarts

./: .gitignore  Cargo.toml  README.md  flake.nix  main.rs  rust-toolchain.toml  test.html
src/: main.rs
src/chart/: mod.rs
