[package]
name = "mdbook-echarts"
version = "0.0.5"
authors = ["Zhuang Biaowei"]
edition = "2021"
description = "A preprocessor and cli tool for mdbook to show chart use echarts.js."
license = "MIT"
documentation = "https://crates.io/crates/mdbook-echarts"
homepage = "https://crates.io/crates/mdbook-echarts"
repository = "https://github.com/zhuangbiaowei/mdbook-echarts"
readme = "README.md"
keywords = ["mdbook", "markdown", "chart", "Echarts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.26"
tungstenite = "0.26.1"
mdbook = "0.4.6"
anyhow = "1.0.32"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
regex = "1"
uuid = { version = "1.11.1", features = ["serde", "v4"] }
